Fix dark mode h1 selector - change from html.h1 to html.dark-mode h1

--- a/playoffs/css/dark-mode.css
+++ b/playoffs/css/dark-mode.css
@@ -6,7 +6,7 @@ html.dark-mode body {
     color: #e6e6e6;
 }
 
-html.h1 {
+html.dark-mode h1 {
     color: white;
 }
 
